--- a/index.html
+++ b/index.html
@@ -84,47 +84,41 @@
 </head>
 <body><img src="header.gif" alt="Background" class="bg-image1">
     <div class="div-1">
-        <a href="#introduction"><button class="btn-header">Home</button></a>&nbsp;
-        <a href=><button class="btn-header">Content</button></a>&nbsp;
-        <a href=""><button class="btn-header">Ref</button></a>&nbsp;
-        <a href="#About"><button class="btn-header">About</button></a>&nbsp;
+        <a href="#introduction"><button class="btn-header">Home</button></a>&nbsp;&nbsp;
+        <a href="#content"><button class="btn-header">Content</button></a>&nbsp;&nbsp;
+        <a href="#references"><button class="btn-header">Ref</button></a>&nbsp;&nbsp;
+        <a href="#About"><button class="btn-header">About</button></a>&nbsp;&nbsp;
         
     </div>
     <div class="div-2"><section id="introduction" style="font-size: 3rem;">
         <h1>Cell Modification</h1></section><br>
         <p><i>What can I say, except you're welcome?</i><br><br>
         Good day having you here! I'm thinking you want to learn about the Cell Modification. You came at the right place!
-        Let's learn the three types of Cell Modification along with there definitions and functions. </p><br><br><br>
+        Let's learn the three types of Cell Modification along with their definitions and functions. </p><br><br><br>
         <p id="justified">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<b>Cell Modification</b> refers to the structural or functional changes that certain cells undergo to perform specialized tasks in the body. 
             These changes allow cells to adapt and carry out roles beyond their basic form, such as providing protection, aiding in absorption, secretion, or 
             sensation. Modified cells are essential for maintaining the efficiency and specialization of tissues and organs.</p><br><br><br>
         <div class="itc_left">
-        <img src="logo.png" id="clickImage" style="width: 50px;">
-        <span class="hidden-text" id="text">
-        Yawa
-        </span>
-        <img src="logo.png" id="clickImage" style="width: 50px;">
-        <span class="hidden-text" id="text">
-        Yawa
-        </span>
-        <img src="logo.png" id="clickImage" style="width: 50px;">
-        <span class="hidden-text" id="text">
-        Yawa
+        <img src="clickme.gif" id="clickImage" style="width: 150px;">
+        <span class="hidden-text" id="text" style="text-align: left;">
+        This website is purely for educational purposes and is not subject to any agency or organization.<br>
+        <br>Submitted by: <br><br>Dela Vega, Erik Miguel G.<br>Deloso, Jade Jonash M.<br>Marce&#241;o, Augustine Josh F.<br>Montojo, Mariam Orence M.
         </span></div><br><br>
+        <section id="content">
         <div class="itc_left">
-            <img src="try image.svg" alt="Cute Image" class="side-image">
+            <img src="APICAL.gif" class="side-image">
             <div class="text-content">
                 <h2>Apical Cell Modification</h2>
                 <p>Changes at the tip of certain plant or fungal cells that enhance absorption, protection, or reproduction, depending on the cell type.</p>
             </div>
-        </div>
+        </div></section>
         <p class="animate-on-scroll" id="justified"><b>Apical cell modification</b> refers to specialized changes at the tip (apex) of certain plant or fungal cells 
             that allow them to perform specific functions. These modifications can include elongation, thickening, or 
             the formation of structures like root hairs, trichomes, or pollen tubes. Such adaptations enhance absorption, 
             protection, or reproduction, depending on the cell’s role in the organism.</p>
-        <img src="header.gif" alt="Background" id="bg-image1" class="animate-on-scroll">
+        <img src="APICAL1.png" alt="Background" id="bg-image1" class="animate-on-scroll">
         <div class="itc_right">
-            <img src="try image.svg" alt="Cute Image" class="side-image">
+            <img src="BASAL.gif" class="side-image">
             <div class="text-content">
                 <h2>Basal Cell Modification</h2>
                 <p>Function to anchor cells, provide structural support, and aid in material exchange with surrounding tissues.</p>
@@ -133,9 +127,9 @@
         <p class="animate-on-scroll" id="justified"><b>Basal cell modifications</b> are structural adaptations found at the base of certain cells, particularly in plants. 
             These modifications help anchor cells to underlying tissues, provide mechanical support, and sometimes assist in the transport of substances between the 
             cell and surrounding structures.</p>
-        <img src="header.gif" alt="Background" id="bg-image1" class="animate-on-scroll">
+        <img src="BASAL1.png" alt="Background" id="bg-image1" class="animate-on-scroll">
             <div class="itc_left">
-                <img src="try image.svg" alt="Cute Image" class="side-image">
+                <img src="LATERAL.gif" class="side-image">
                 <div class="text-content">
                     <h2>Lateral Cell Modification</h2>
                     <p>Function to connect adjacent cells, providing support, preventing leakage, and enabling cell-to-cell communication.</p>
@@ -144,7 +138,7 @@
             <p class="animate-on-scroll" id="justified"><b>Lateral cell modifications</b> are structural adaptations found on the sides of cells that help them tightly connect 
                 with neighboring cells. These modifications strengthen tissues by providing support, preventing leakage between cells, and allowing communication or 
                 transport of substances across adjacent cells.</p>
-        <img src="header.gif" alt="Background" id="bg-image1" class="animate-on-scroll">
+        <img src="LATERAL1.png" alt="Background" id="bg-image1" class="animate-on-scroll">
         <a href="https://web.facebook.com/profile.php?id=61568473178160" target="_blank" class="link-button">
         </a>
     </div>
@@ -177,4 +171,3 @@
 </script>
 </body>
 </html>
-
